# esp-mdf

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  project.cmake  project.mk
components/mcommon/: CMakeLists.txt  Kconfig  mdf_err_to_name.c  mdf_event_loop.c  mdf_mem.c
components/mcommon/include/: mdf_common.h  mdf_err.h  mdf_mem.h
components/mconfig/: CMakeLists.txt  mconfig_blufi.c  mconfig_chain.c  mconfig_security.c
components/mdebug/: CMakeLists.txt  idf_component.yml  mdebug_cmd.c  mdebug_console.c
components/mespnow/: CMakeLists.txt  mespnow.c
components/mlink/: mlink_ble.c  mlink_handle.c  mlink_httpd.c  mlink_notice.c  mlink_sniffer.c  mlink_utils.c
components/mupgrade/: CMakeLists.txt  Kconfig  mupgrade_check.c  mupgrade_node.c  mupgrade_root.c
components/mupgrade/include/: mupgrade.h
components/mwifi/: CMakeLists.txt  Kconfig  mwifi.c
components/mwifi/include/: mwifi.h
examples/: README.md
examples/aliyun_linkkit/mesh-with-aliyun/: sdkconfig.defaults  sdkconfig_root
examples/development_kit/buddy/: CMakeLists.txt  sdkconfig.defaults
examples/development_kit/button/: CMakeLists.txt  sdkconfig.defaults
examples/development_kit/light/: CMakeLists.txt  README.md  README_cn.md  sdkconfig.defaults
examples/development_kit/sense/: CMakeLists.txt  sdkconfig.defaults
examples/function_demo/mcommon/: CMakeLists.txt
examples/function_demo/mconfig/: CMakeLists.txt  (+1 more)
examples/get-started/: CMakeLists.txt
examples/wireless_debug/: CMakeLists.txt  sdkconfig.defaults
tools/: build_all_examples.sh  cleanup_all_examples.sh
(+61 files in other folders)
